# AgentRAG

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: benchmark_retrieval.py  create_sample_pdf.py  smoke_phase6.py  verify_phase1.sh  verify_phase3.sh  verify_phase3b.sh  verify_phase4.sh  verify_phase5.sh  verify_phase6.sh  verify_phase7.sh
specs/: architecture.md  mission.md  roadmap.md  tech-stack.md
specs/2026-04-29-phase-1-core-ingestion-pipeline/: plan.md  requirements.md  validation.md
specs/2026-04-29-phase-2-mcp-server/: plan.md  requirements.md  validation.md
specs/2026-05-01-phase-3-extended-file-support/: plan.md  requirements.md  validation.md
specs/2026-05-01-phase-3b-extended-ingestion-agentic/: plan.md  requirements.md  validation.md
specs/2026-05-05-phase4-search-quality/: plan.md  requirements.md  validation.md
specs/2026-05-05-phase5-distribution/: plan.md  requirements.md  validation.md
specs/2026-05-05-phase6-multi-collection-streaming/: plan.md  requirements.md  validation.md
specs/2026-05-05-phase7-cloud-sync/: plan.md  requirements.md  validation.md
src/agentrag/: cli.py  config.py  types.py
src/agentrag/ingestion/: chunker.py  embedder.py  pipeline.py  reader.py  reader_registry.py
src/agentrag/ingestion/readers/: ebooks.py  email_reader.py  media.py  office.py  structured.py  web.py
src/agentrag/retrieval/: evaluator.py  query_planner.py  reranker.py  searcher.py  streaming.py
src/agentrag/server/: app.py  tools.py
src/agentrag/store/: qdrant.py
src/agentrag/sync/: base.py  cloud.py  factory.py  local.py
tests/: conftest.py
tests/fixtures/: sample.csv  sample.docx  sample.eml  sample.epub  sample.html  sample.ipynb  sample.json  sample.md  sample.pptx  sample.py  sample.srt  sample.toml  sample.txt  sample.xlsx  sample.xml  sample.yaml
tests/integration/: test_agentic_retrieval.py  test_concurrent_upsert.py  test_extended_ingestion.py  test_extended_ingestion_3b.py  test_multi_collection.py  test_pipeline.py  test_search_filters.py  test_server.py  test_streaming_integration.py  test_sync_local.py
tests/unit/: test_agentic_tools.py  test_chunker.py  test_cli_sync.py  test_config.py  test_embedder.py  test_evaluator.py  test_pipeline.py  test_query_planner.py  test_reader.py  test_reader_registry.py  test_reranker.py  test_searcher.py  test_store.py  test_streaming.py  test_sync_base.py  test_sync_cloud.py  test_sync_factory.py  test_sync_local.py  test_tools.py  test_url_reader.py
