[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrag"
version = "0.1.0"
description = "Agentic RAG MCP Server — persistent semantic memory over private data"
requires-python = ">=3.12"
dependencies = [
    "mcp==1.27.0",
    "fastapi>=0.136.0,<0.137.0",
    "uvicorn>=0.46.0,<0.47.0",
    "qdrant-client>=1.17.0,<1.18.0",
    "sentence-transformers>=3.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0,<1.2.0",
    "beautifulsoup4>=4.12.0,<4.13.0",
    "pydantic-settings>=2.0,<3.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.0,<26.0",
    "ruff>=0.15.0,<0.16.0",
    "mypy>=1.10.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0,<2.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "hatchling",
    "numpy>=1.26",
    "types-beautifulsoup4",
]

[project.scripts]
agentrag = "agentrag.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agentrag"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C90", "UP", "N"]
ignore = ["N818"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
