[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrag-mcp"
version = "0.1.0"
description = "Agentic RAG MCP Server — persistent semantic memory over private data"
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp==1.27.0",
    "fastapi>=0.136.0,<0.137.0",
    "uvicorn>=0.46.0,<0.47.0",
    "qdrant-client>=1.17.0,<1.18.0",
    "sentence-transformers>=3.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0,<1.2.0",
    "beautifulsoup4>=4.12.0,<4.13.0",
    "pydantic-settings>=2.0,<3.0",
    "typer>=0.12.0",
    "PyYAML>=6.0,<7.0",
    "google-genai>=1.0",
    "boto3>=1.0,<2.0",
    "cryptography>=42.0,<43.0",
]

[project.urls]
Homepage = "https://github.com/SARAMALI15792/AgentRAG"
Repository = "https://github.com/SARAMALI15792/AgentRAG"
Issues = "https://github.com/SARAMALI15792/AgentRAG/issues"

[project.optional-dependencies]
dev = [
    "black>=25.0,<26.0",
    "ruff>=0.15.0,<0.16.0",
    "mypy>=1.10.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0,<2.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "hatchling",
    "build>=1.2",
    "numpy>=1.26",
    "types-beautifulsoup4",
    "types-PyYAML",
    "types-openpyxl",
    "boto3-stubs[s3]>=1.0,<2.0",
]
office = [
    "openpyxl>=3.1.0,<3.2.0",
    "python-pptx>=1.0.0,<2.0.0",
]
ebooks = [
    "ebooklib>=0.18,<0.19",
    "mobi>=0.3.0,<0.4.0",
]
web = [
    "httpx>=0.27.0",
    "pysrt>=1.1.0,<1.2.0",
    "webvtt-py>=0.5.0,<0.6.0",
]
sync = [
    "boto3>=1.0,<2.0",
    "cryptography>=42.0,<43.0",
]
all = [
    "agentrag[office,ebooks,web,sync]",
]

[project.scripts]
agentrag = "agentrag.cli:app"
agentrag-mcp = "agentrag.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agentrag"]

[tool.black]
line-length = 88
extend-exclude = '''
/(
    \.agents
  | \.claude
)/
'''

[tool.ruff]
line-length = 88
extend-exclude = [".agents", ".claude"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C90", "UP", "N"]
ignore = ["N818"]

[tool.ruff.lint.per-file-ignores]
"src/agentrag/server/app.py" = ["C901"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "pysrt",
    "webvtt",
    "ebooklib",
    "ebooklib.epub",
    "mobi",
    "pptx",
    "pptx.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["boto3", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
